Fix bush 2 z-index

--- a/css/mini.css
+++ b/css/mini.css
@@ -74,7 +74,7 @@ div#minii {
     top: 75px;
     width: 55px;
     height: 28px;
-    z-index: 53;
+    z-index: 103;
     background-image: url('../image/mini/scenes/midlands/bush2.png');
 }
 
